<resources>
    <string name="app_name">Calculadora_con_menu</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Configuración</string>
    <string name="title_notifications">Notifications</string>

    <string name="_0">0</string>
    <string name="_eq">=</string>
    <string name="_dot">.</string>
    <string name="_clean">C</string>
    <string name="_plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_subtract">−</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_multiply">×</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_divide">÷</string>
    <string name="_delete">del</string>
    <string name="borrar">borrar</string>
</resources>